BTL4/assignment4-initial/target/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'number'", "'bool'", "'string'", 
                     "'return'", "'var'", "'dynamic'", "'func'", "'for'", 
                     "'until'", "'by'", "'break'", "'continue'", "'if'", 
                     "'else'", "'elif'", "'begin'", "'end'", "'not'", "'and'", 
                     "'or'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'<-'", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'=='", "'...'", 
                     "'('", "')'", "'['", "']'", "','", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\n'" ]

    symbolicNames = [ "<INVALID>", "BOOLLIT", "NUMBER_KW", "BOOL_KW", "STRING_KW", 
                      "RETURN_KW", "VAR_KW", "DYNAMIC_KW", "FUNC_KW", "FOR_KW", 
                      "UNTIL_KW", "BY_KW", "BREAK_KW", "CONTINUE_KW", "IF_KW", 
                      "ELSE_KW", "ELIF_KW", "BEGIN_KW", "END_KW", "NOT_KW", 
                      "AND_KW", "OR_KW", "ADD_OP", "SUB_OP", "MUL_OP", "DIV_OP", 
                      "MOD_OP", "EQL_OP", "ASSIGN_OP", "NEQL_OP", "LESS_THAN_OP", 
                      "LESS_EQL_OP", "MORE_THAN_OP", "MORE_EQL_OP", "DBL_EQL", 
                      "CONCAT_STR_OP", "LB", "RB", "LSB", "RSB", "CM", "NUMBERLIT", 
                      "STRINGLIT", "COMMENT", "NEW_LINE", "IDENTIFIER", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_newlinelist = 3
    RULE_vardecl = 4
    RULE_typdecl = 5
    RULE_typ_kw = 6
    RULE_val_init = 7
    RULE_arr_size = 8
    RULE_sizelist = 9
    RULE_dimension = 10
    RULE_implicit_keyworddecl = 11
    RULE_varkwdecl = 12
    RULE_dynamickwdecl = 13
    RULE_literal = 14
    RULE_arrtyp = 15
    RULE_func_call = 16
    RULE_funcdecl = 17
    RULE_paramlist = 18
    RULE_paramlistprime = 19
    RULE_paramdecl = 20
    RULE_stmtlist = 21
    RULE_stmtele = 22
    RULE_stmt = 23
    RULE_returnstmt = 24
    RULE_func_callstmt = 25
    RULE_assignstmt = 26
    RULE_forstmt = 27
    RULE_breakstmt = 28
    RULE_continuestmt = 29
    RULE_blockstmt = 30
    RULE_ifstmt = 31
    RULE_eliflist = 32
    RULE_elifstmt = 33
    RULE_elsestmt = 34
    RULE_exprlist = 35
    RULE_exprprime = 36
    RULE_expr = 37
    RULE_expr1 = 38
    RULE_expr2 = 39
    RULE_expr3 = 40
    RULE_expr4 = 41
    RULE_expr5 = 42
    RULE_expr6 = 43
    RULE_expr7 = 44
    RULE_element_expression = 45
    RULE_index_operator = 46

    ruleNames =  [ "program", "decllist", "decl", "newlinelist", "vardecl", 
                   "typdecl", "typ_kw", "val_init", "arr_size", "sizelist", 
                   "dimension", "implicit_keyworddecl", "varkwdecl", "dynamickwdecl", 
                   "literal", "arrtyp", "func_call", "funcdecl", "paramlist", 
                   "paramlistprime", "paramdecl", "stmtlist", "stmtele", 
                   "stmt", "returnstmt", "func_callstmt", "assignstmt", 
                   "forstmt", "breakstmt", "continuestmt", "blockstmt", 
                   "ifstmt", "eliflist", "elifstmt", "elsestmt", "exprlist", 
                   "exprprime", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "element_expression", "index_operator" ]

    EOF = Token.EOF
    BOOLLIT=1
    NUMBER_KW=2
    BOOL_KW=3
    STRING_KW=4
    RETURN_KW=5
    VAR_KW=6
    DYNAMIC_KW=7
    FUNC_KW=8
    FOR_KW=9
    UNTIL_KW=10
    BY_KW=11
    BREAK_KW=12
    CONTINUE_KW=13
    IF_KW=14
    ELSE_KW=15
    ELIF_KW=16
    BEGIN_KW=17
    END_KW=18
    NOT_KW=19
    AND_KW=20
    OR_KW=21
    ADD_OP=22
    SUB_OP=23
    MUL_OP=24
    DIV_OP=25
    MOD_OP=26
    EQL_OP=27
    ASSIGN_OP=28
    NEQL_OP=29
    LESS_THAN_OP=30
    LESS_EQL_OP=31
    MORE_THAN_OP=32
    MORE_EQL_OP=33
    DBL_EQL=34
    CONCAT_STR_OP=35
    LB=36
    RB=37
    LSB=38
    RSB=39
    CM=40
    NUMBERLIT=41
    STRINGLIT=42
    COMMENT=43
    NEW_LINE=44
    IDENTIFIER=45
    WS=46
    UNCLOSE_STRING=47
    ILLEGAL_ESCAPE=48
    ERROR_CHAR=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(ZCodeParser.DecllistContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def newlinelist(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NEW_LINE]:
                self.state = 94
                self.newlinelist()
                pass
            elif token in [ZCodeParser.NUMBER_KW, ZCodeParser.BOOL_KW, ZCodeParser.STRING_KW, ZCodeParser.VAR_KW, ZCodeParser.DYNAMIC_KW, ZCodeParser.FUNC_KW]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 98
            self.decllist()
            self.state = 99
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(ZCodeParser.DecllistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = ZCodeParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.decl()
                self.state = 102
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newlinelist(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(ZCodeParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(ZCodeParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = ZCodeParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBER_KW, ZCodeParser.BOOL_KW, ZCodeParser.STRING_KW, ZCodeParser.VAR_KW, ZCodeParser.DYNAMIC_KW]:
                self.state = 107
                self.vardecl()
                pass
            elif token in [ZCodeParser.FUNC_KW]:
                self.state = 108
                self.funcdecl()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 111
            self.newlinelist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewlinelistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEW_LINE(self):
            return self.getToken(ZCodeParser.NEW_LINE, 0)

        def newlinelist(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_newlinelist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewlinelist" ):
                return visitor.visitNewlinelist(self)
            else:
                return visitor.visitChildren(self)




    def newlinelist(self):

        localctx = ZCodeParser.NewlinelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_newlinelist)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(ZCodeParser.NEW_LINE)
                self.state = 114
                self.newlinelist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(ZCodeParser.NEW_LINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typdecl(self):
            return self.getTypedRuleContext(ZCodeParser.TypdeclContext,0)


        def implicit_keyworddecl(self):
            return self.getTypedRuleContext(ZCodeParser.Implicit_keyworddeclContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = ZCodeParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBER_KW, ZCodeParser.BOOL_KW, ZCodeParser.STRING_KW]:
                self.state = 118
                self.typdecl()
                pass
            elif token in [ZCodeParser.VAR_KW, ZCodeParser.DYNAMIC_KW]:
                self.state = 119
                self.implicit_keyworddecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ_kw(self):
            return self.getTypedRuleContext(ZCodeParser.Typ_kwContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def arr_size(self):
            return self.getTypedRuleContext(ZCodeParser.Arr_sizeContext,0)


        def val_init(self):
            return self.getTypedRuleContext(ZCodeParser.Val_initContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_typdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypdecl" ):
                return visitor.visitTypdecl(self)
            else:
                return visitor.visitChildren(self)




    def typdecl(self):

        localctx = ZCodeParser.TypdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.typ_kw()
            self.state = 123
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.LSB]:
                self.state = 124
                self.arr_size()
                pass
            elif token in [ZCodeParser.ELIF_KW, ZCodeParser.ASSIGN_OP, ZCodeParser.NEW_LINE]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.ASSIGN_OP]:
                self.state = 128
                self.val_init()
                pass
            elif token in [ZCodeParser.ELIF_KW, ZCodeParser.NEW_LINE]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Typ_kwContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER_KW(self):
            return self.getToken(ZCodeParser.NUMBER_KW, 0)

        def BOOL_KW(self):
            return self.getToken(ZCodeParser.BOOL_KW, 0)

        def STRING_KW(self):
            return self.getToken(ZCodeParser.STRING_KW, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_typ_kw

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp_kw" ):
                return visitor.visitTyp_kw(self)
            else:
                return visitor.visitChildren(self)




    def typ_kw(self):

        localctx = ZCodeParser.Typ_kwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typ_kw)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.NUMBER_KW) | (1 << ZCodeParser.BOOL_KW) | (1 << ZCodeParser.STRING_KW))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Val_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN_OP(self):
            return self.getToken(ZCodeParser.ASSIGN_OP, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_val_init

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVal_init" ):
                return visitor.visitVal_init(self)
            else:
                return visitor.visitChildren(self)




    def val_init(self):

        localctx = ZCodeParser.Val_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_val_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(ZCodeParser.ASSIGN_OP)
            self.state = 135
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_sizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def sizelist(self):
            return self.getTypedRuleContext(ZCodeParser.SizelistContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_arr_size

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr_size" ):
                return visitor.visitArr_size(self)
            else:
                return visitor.visitChildren(self)




    def arr_size(self):

        localctx = ZCodeParser.Arr_sizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arr_size)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(ZCodeParser.LSB)
            self.state = 138
            self.sizelist()
            self.state = 139
            self.match(ZCodeParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SizelistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimension(self):
            return self.getTypedRuleContext(ZCodeParser.DimensionContext,0)


        def CM(self):
            return self.getToken(ZCodeParser.CM, 0)

        def sizelist(self):
            return self.getTypedRuleContext(ZCodeParser.SizelistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_sizelist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSizelist" ):
                return visitor.visitSizelist(self)
            else:
                return visitor.visitChildren(self)




    def sizelist(self):

        localctx = ZCodeParser.SizelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_sizelist)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.dimension()
                self.state = 142
                self.match(ZCodeParser.CM)
                self.state = 143
                self.sizelist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.dimension()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBERLIT(self):
            return self.getToken(ZCodeParser.NUMBERLIT, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_dimension

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = ZCodeParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dimension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(ZCodeParser.NUMBERLIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Implicit_keyworddeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varkwdecl(self):
            return self.getTypedRuleContext(ZCodeParser.VarkwdeclContext,0)


        def dynamickwdecl(self):
            return self.getTypedRuleContext(ZCodeParser.DynamickwdeclContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_implicit_keyworddecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImplicit_keyworddecl" ):
                return visitor.visitImplicit_keyworddecl(self)
            else:
                return visitor.visitChildren(self)




    def implicit_keyworddecl(self):

        localctx = ZCodeParser.Implicit_keyworddeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_implicit_keyworddecl)
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.VAR_KW]:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.varkwdecl()
                pass
            elif token in [ZCodeParser.DYNAMIC_KW]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.dynamickwdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarkwdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_KW(self):
            return self.getToken(ZCodeParser.VAR_KW, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def val_init(self):
            return self.getTypedRuleContext(ZCodeParser.Val_initContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_varkwdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarkwdecl" ):
                return visitor.visitVarkwdecl(self)
            else:
                return visitor.visitChildren(self)




    def varkwdecl(self):

        localctx = ZCodeParser.VarkwdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_varkwdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(ZCodeParser.VAR_KW)
            self.state = 155
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 156
            self.val_init()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DynamickwdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DYNAMIC_KW(self):
            return self.getToken(ZCodeParser.DYNAMIC_KW, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def val_init(self):
            return self.getTypedRuleContext(ZCodeParser.Val_initContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_dynamickwdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDynamickwdecl" ):
                return visitor.visitDynamickwdecl(self)
            else:
                return visitor.visitChildren(self)




    def dynamickwdecl(self):

        localctx = ZCodeParser.DynamickwdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_dynamickwdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(ZCodeParser.DYNAMIC_KW)
            self.state = 159
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.ASSIGN_OP]:
                self.state = 160
                self.val_init()
                pass
            elif token in [ZCodeParser.ELIF_KW, ZCodeParser.NEW_LINE]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def NUMBERLIT(self):
            return self.getToken(ZCodeParser.NUMBERLIT, 0)

        def BOOLLIT(self):
            return self.getToken(ZCodeParser.BOOLLIT, 0)

        def STRINGLIT(self):
            return self.getToken(ZCodeParser.STRINGLIT, 0)
